deploy: f0ec174203a477e7b2a176087cbd07bbfdc1083f

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         <div class="parcours_data">
                             <div>
                                 <h3 class="parcours_title">
-                                    <a href="pages/skills-formation.html" class="">
+                                    <a href="skills-formation.html" class="">
                                         <span data-lang="education_bachelor"></span>
                                         <i class="uil uil-arrow-right"></i>
                                     </a>
