deploy: bfdc33ee1118e34a35c588874685d0907202a651

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                         class="footer_social">
                         <i class="uil uil-youtube"></i>
                     </a>
-                    <a href="https://github.com/Senyotsu" target="_blank" class="footer_social">
+                    <a href="https://github.com/dasmathe" target="_blank" class="footer_social">
                         <i class="uil uil-github"></i>
                     </a>
                 </div>
